ok,leaving-it-alone-now

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head >
+  <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"> -->
+<meta name="theme-color" content="#ffffff">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Document</title>
+    <title>    </title>
     <link rel="stylesheet" href="css/style.css">
-  
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
+    <link rel="manifest" href="/site.webmanifest">
    
     <script src="index.js"></script>
     <script
@@ -14,12 +18,12 @@
    
     <!-- <script type="text/javascript" src="https://unpkg.com/vue"></script> -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
-    
+
 </head>
 <div class=iframe-container >
   <iframe src="https://preview.p5js.org/malathk/embed/y3J79bI4I"></iframe>
   </div>
-<body >
+<body onload="typewriter()" >
 
   
    <div class="container">
