--- a/projects/domestic.html
+++ b/projects/domestic.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 
 <head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
     <script src="/airtable.source.js"></script>
     <script src="/domestic.js"></script>
 <!--   <link rel="stylesheet" href="css/style.css"> -->
