--- a/projects/self.html
+++ b/projects/self.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
     <script src="/airtable.source.js"></script>
     <script src="/self.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
