--- a/projects/self.html
+++ b/projects/self.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
-    <script src="/airtable.source.js"></script>
-    <script src="/self.js"></script>
+    <script src="/<novport>/airtable.source.js"></script>
+    <script src="/<novport>/self.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
     <link rel="stylesheet" href="/css/individualproj.css">
