--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head >
+  <base href="/novport/">
   <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"> -->
 <meta name="theme-color" content="#ffffff">
     <meta charset="UTF-8">
@@ -42,8 +43,8 @@ Hey there! ・。. ☆○o。o。</p> <span class="star">.｡   .        ・    
    
 <ul class="type-of-work">
     <h2> <span class="star">.｡*ﾟ+.｡* ・゜・。．.ﾟ°☆⁺˚.*.｡</span>Projects</h2>
-     <li><a href="/self.html">2020 - Surveillance of The Self</a></li>
-    <li><a href="/domestic.html">2020 - Domestic Violence + Cyber Abuse</a></li>
+     <li><a href="/projects/self.html">2020 - Surveillance of The Self</a></li>
+    <li><a href="/projects/domestic.html">2020 - Domestic Violence + Cyber Abuse</a></li>
     <!-- <li><a href="/projects/emerging.html"> 2020 - Emerging Media: Content Creator </a></li> -->
   </ul>
     <ul class="type-of-work">
