--- a/projects/workcont.html
+++ b/projects/workcont.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 
 <head>
+  <base href="/novport/">
     <script src="/airtable.source.js"></script>
     <script src="/site1.js"></script>
   <link rel="stylesheet" href="css/uikitindex.css">
