--- a/projects/emerging.html
+++ b/projects/emerging.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 
 <head>
+  <base href="/novport/">
     <script src="/airtable.source.js"></script>
     <script src="/emerging.js"></script>
     <!--  <link rel="stylesheet" href="css/style.css"> -->
