it_works_i_think

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>    </title>
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/novport/blob.ico">
     <link rel="manifest" href="/site.webmanifest">
    
     <script src="index.js"></script>
@@ -44,7 +44,7 @@ Hey there! ・。. ☆○o。o。</p> <span class="star">.｡   .        ・    
 <ul class="type-of-work">
     <h2> <span class="star">.｡*ﾟ+.｡* ・゜・。．.ﾟ°☆⁺˚.*.｡</span>Projects</h2>
      <li><a href="/projects/self.html" onclick="window.open('/novport/projects/self.html');">2020 - Surveillance of The Self</a></li>
-    <li><a href="/projects/domestic.html">2020 - Domestic Violence + Cyber Abuse</a></li>
+    <li><a href="/novport/projects/domestic.html">2020 - Domestic Violence + Cyber Abuse</a></li>
     <!-- <li><a href="/projects/emerging.html"> 2020 - Emerging Media: Content Creator </a></li> -->
   </ul>
     <ul class="type-of-work">
