--- a/projects/domestic.html
+++ b/projects/domestic.html
@@ -3,11 +3,11 @@
 
 <head>
   <base href="/novport/">
-  <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
-    <script src="/airtable.source.js"></script>
-    <script src="/domestic.js"></script>
+  <link rel="icon" type="image/png" sizes="32x32" href="/novport/blob.ico">
+    <script src="/novport/airtable.source.js"></script>
+    <script src="/novport/domestic.js"></script>
 <!--   <link rel="stylesheet" href="css/style.css"> -->
-<link rel="stylesheet" href="/css/individualproj.css">
+<link rel="stylesheet" href="/novport/css/individualproj.css">
   <meta charset="UTF-8">
 
 </head>
