--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>    </title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="/novport/blob.ico">
     <link rel="manifest" href="/site.webmanifest">
@@ -21,9 +21,9 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"></script>
 
 </head>
-<div class=iframe-container >
+<!-- <div class=iframe-container >
   <iframe src="https://preview.p5js.org/malathk/embed/y3J79bI4I"></iframe>
-  </div>
+  </div> -->
 <body onload="typewriter()" >
 
   
