--- a/projects/self.html
+++ b/projects/self.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="/novport/">
-    <link rel="icon" type="image/png" sizes="32x32" href="/novport/blob.ico">
-    <script src="/novport/airtable.source.js"></script>
-    <script src="/novport/self.js"></script>
+    <!-- <base href="/novport/"> -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
+    <script src="airtable.source.js"></script>
+    <script src="/self.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/novport/css/individualproj.css">
+    <link rel="stylesheet" href="/css/individualproj.css">
       
     <meta charset="UTF-8" />
     
