--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>    </title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/novport/blob.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="blob.ico">
     <link rel="manifest" href="/site.webmanifest">
    
     <script src="index.js"></script>
