--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ Hey there! ・。. ☆○o。o。</p> <span class="star">.｡   .        ・    
    
 <ul class="type-of-work">
     <h2> <span class="star">.｡*ﾟ+.｡* ・゜・。．.ﾟ°☆⁺˚.*.｡</span>Projects</h2>
-     <li><a href="projects/self.html">2020 - Surveillance of The Self</a></li>
-    <li><a href="projects/domestic.html">2020 - Domestic Violence + Cyber Abuse</a></li>
+     <li><a href="novport/projects/self.html">2020 - Surveillance of The Self</a></li>
+    <li><a href="novport/projects/domestic.html">2020 - Domestic Violence + Cyber Abuse</a></li>
     <!-- <li><a href="/projects/emerging.html"> 2020 - Emerging Media: Content Creator </a></li> -->
   </ul>
     <ul class="type-of-work">
