--- a/thesis.html
+++ b/thesis.html
@@ -3,11 +3,11 @@
 
 <head>
   <base href="/novport/">
-  <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="blob.ico">
     <script src="/airtable.source.js"></script>
     <script src="/thesis.js"></script>
 <!--   <link rel="stylesheet" href="css/style.css"> -->
-<link rel="stylesheet" href="/css/individualproj.css">
+<link rel="stylesheet" href="css/individualproj.css">
   <meta charset="UTF-8">
 
 </head>
