--- a/domestic.html
+++ b/domestic.html
@@ -2,12 +2,12 @@
 <html lang="en" >
 
 <head>
-  <base href="/novport/">
+ 
   <link rel="icon" type="image/png" sizes="32x32" href="blob.ico">
     <script src="/airtable.source.js"></script>
     <script src="/domestic.js"></script>
 <!--   <link rel="stylesheet" href="css/style.css"> -->
-<link rel="stylesheet" href="/css/individualproj.css">
+<link rel="stylesheet" href="individualproj.css">
   <meta charset="UTF-8">
 
 </head>
