--- a/self.html
+++ b/self.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <!-- <base href="/novport/"> -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/blob.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="blob.ico">
     <script src="airtable.source.js"></script>
-    <script src="/self.js"></script>
+    <script src="self.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/individualproj.css">
+    <link rel="stylesheet" href="individualproj.css">
       
     <meta charset="UTF-8" />
     
